re #30 fixed whitespace

--- a/code/media/com_files/css/files-layout-icons.css
+++ b/code/media/com_files/css/files-layout-icons.css
@@ -9,7 +9,7 @@
  * See COPYRIGHT.php for copyright notices and details.
  */
 
-#files-grid {
+#files-grid > div {
     padding: 10px;
 }
 
